--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/maker.logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="keywords"
+      content="maker, skills, robotique, électronique, formation, éducation, kits, projets, enfants, STEM, technologie, innovation, Tunisie, ateliers, bootcamp, coding, programmation, Arduino, Raspberry Pi, impression 3D, bricolage, DIY, science, créativité, apprentissage"
+    />
     <title>Maker Skills</title>
   </head>
   <body>
